# awesome_cli

./: .gitignore  DESIGN.md  README.md  pyproject.toml
docs/: frontend_design.md  index.md
frontend/src/app/: app-routing.module.ts
frontend/src/app/core/services/: assets.service.ts  backtests.service.ts  strategies.service.ts
frontend/src/app/features/assets/asset-detail/: asset-detail.component.html  asset-detail.component.ts
frontend/src/app/features/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
frontend/src/app/shared/models/: api-response.model.ts  asset.model.ts  backtest.model.ts  strategy.model.ts
src/awesome_cli/: __init__.py  __main__.py  cli.py  config.py  core.py
src/awesome_cli/core/: __init__.py  io.py  models.py  services.py
src/awesome_cli/core/crypto/: cache.py  fetcher.py  repository.py  scheduler.py
src/awesome_cli/utils/: __init__.py  logging.py  paths.py
src/web_project/config/: settings.py  urls.py
src/web_project/inventory/: api_urls.py  api_views.py  api_views_crypto.py  apps.py  models.py  renderers.py  serializers.py  urls.py  views.py
src/web_project/inventory/management/commands/: populate_data.py
src/web_project/inventory/migrations/: 0001_initial.py
src/web_project/inventory/templates/inventory/: base.html  home.html  item_detail.html  item_list.html
src/web_project/inventory/tests/: test_api.py  test_item_detail_api.py
tests/: __init__.py  test_cli.py  test_config.py  test_config_loading.py  test_core.py  test_crypto_core.py  test_models.py  test_services.py
(+5 files in other folders)
