[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awesome_cli"
version = "0.1.0"
description = "A production-ready Python CLI application scaffold."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
urls = { Repository = "https://github.com/ollieb89/awesome_cli" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "drf-spectacular>=0.27.0",
    "django-filter>=23.0",
    "requests>=2.31.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
awesome-cli = "awesome_cli.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-setuptools",
]

[tool.hatch.build.targets.wheel]
packages = ["src/awesome_cli"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
